--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ theme: clean-blog
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repository: git@github.com:sjohnsonpbh/blog.mastertheclouds.com.git
+  repository: git@github.com:sjohnsonpbh/blog.mastertheclouds.com.gitd
   branch: master
 
 # hexo-admin authentification
