added new buildspec

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,13 +3,16 @@ version: 0.2
 phases:
   install:
     commands: 
-      - npm ci
-    
+      - npm install -g hexo-cli
+      - npm install
+      - apt-get update
+      - apt-get install -y awscli
 
   build: 
     commands:
-      - npm run build
+      - hexo generate
 
   post_build: 
     commands:
       - cd public/ && aws s3 sync . s3://blog.mastertheclouds.com/
+      
